# pybibtex

./: .bumpversion.cfg  .gitignore  404.html  Makefile  README.md  example.py  index.html  make_utf8translate.py  mkdocs.yml  objects.inv  pyproject.toml  release_it.sh  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  tests.yml
code_reference/authors/: index.html
code_reference/bibliography/: index.html
code_reference/parser/: index.html
code_reference/utf8/: index.html
contributing/: index.html
doc/source/: conf.py  index.rst
doc/source/snippets/: test.bib
docs/: contributing.md  usage.md
docs/code_reference/: authors.md  bibliography.md  parser.md  utf8.md
pybibtex/: __init__.py  _utf8translate.py  authors.py  bibliography.py  latexutf8.py  parser.py  tests.py
search/: search_index.json
usage/: index.html
